# pragmatic-enterprise-flask

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-alpine  Dockerfile-distroless  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  run_gunicorn.py
deploy/nginx/: Dockerfile  nginx.conf
