[tool.poetry]
name = "pragmatic-enterprise-flask"
version = "0.1.0"
description = ""
authors = ["傅暄桓 <t13762@ms.sltung.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
apiflask = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
